fix the error with the legend not showing up

--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -13,7 +13,7 @@ html {
 
 /* Set Legend Style */
 .info {
-  padding: 1px 10px;
+  padding: 6px 10px;
   background: #ebfae2;
   border-radius: 5px;
 }
